--- a/product-service/package.json
+++ b/product-service/package.json
@@ -4,10 +4,14 @@
   "description": "Serverless webpack example using Typescript",
   "main": "handler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "sls offline start",
+    "test": "jest"
   },
   "dependencies": {
-    "source-map-support": "^0.5.10"
+    "@types/jest": "^26.0.15",
+    "jest": "^26.6.1",
+    "source-map-support": "^0.5.10",
+    "ts-jest": "^26.4.3"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
