--- a/product-service/serverless.yml
+++ b/product-service/serverless.yml
@@ -70,13 +70,15 @@ functions:
       - http:
           path: products
           method: get
+          cors: true
         
-  getProductsById:
-    handler: handler.getProductsById
+  getProductById:
+    handler: handler.getProductById
     events:
       - http:
           path: products/{productId}
           method: get
+          cors: true
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
