--- a/product-service/package.json
+++ b/product-service/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@types/jest": "^26.0.15",
     "jest": "^26.6.1",
+    "pg": "^8.4.2",
+    "serverless-dotenv-plugin": "^3.1.0",
     "source-map-support": "^0.5.10",
     "ts-jest": "^26.4.3"
   },
