--- a/product-service/serverless.yml
+++ b/product-service/serverless.yml
@@ -23,6 +23,7 @@ custom:
 
 plugins:
   - serverless-webpack
+  - serverless-dotenv-plugin
 
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
@@ -79,6 +80,12 @@ functions:
           path: products/{productId}
           method: get
           cors: true
+  createProduct:
+    handler: handler.createProduct
+    events:
+      - http:
+          method: post
+          path: /products
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
