fix import products

--- a/import-service/serverless.yml
+++ b/import-service/serverless.yml
@@ -81,7 +81,7 @@ provider:
 #    - exclude-me-dir/**
 
 functions:
-  getProductsList:
+  importProductsFile:
     handler: handler.importProductsFile
     events:
       - http:
