--- a/import-service/tsconfig.json
+++ b/import-service/tsconfig.json
@@ -8,7 +8,8 @@
     "sourceMap": true,
     "target": "es2017",
     "outDir": "lib",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
   },
   "include": ["./**/*.ts"],
   "exclude": [
