--- a/import-service/serverless.yml
+++ b/import-service/serverless.yml
@@ -21,6 +21,7 @@ plugins:
   - serverless-webpack
 
 custom:
+  sqsQueueName: catalogItemsQueue
   webpack: 
     webpackConfig: './webpack.config.js'
     includeModules: true
@@ -39,7 +40,11 @@ provider:
   name: aws
   runtime: nodejs12.x
   stage: dev
-  region: eu-west-1    
+  region: eu-west-1
+
+  environment:
+    SQS_URL: "${cf:product-service-${self:provider.stage}.SQSQueueUrl}" 
+
   iamRoleStatements:
     - Effect: "Allow"
       Action: "s3:ListBucket"
@@ -50,6 +55,11 @@ provider:
         - "s3:*"
       Resource:
         - "arn:aws:s3:::toys-products-import-service/*"
+    - Effect: "Allow"
+      Action:
+        - "sqs:*"
+      Resource:
+        - "${cf:product-service-${self:provider.stage}.SQSQueueArn}"
 
 # you can add statements to the Lambda function's IAM Role here
 #  iamRoleStatements:
