--- a/product-service/package.json
+++ b/product-service/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/jest": "^26.0.15",
+    "aws-sdk": "^2.797.0",
     "jest": "^26.6.1",
     "pg": "^8.4.2",
     "serverless-dotenv-plugin": "^3.1.0",
