--- a/product-service/serverless.yml
+++ b/product-service/serverless.yml
@@ -17,9 +17,14 @@ service: product-service
 #org: your-org-name
 
 custom:
+  sqsQueueName: catalogItemsQueue
   webpack: 
     webpackConfig: './webpack.config.js'
     includeModules: true
+  serverless-offline:
+    httpPort: 4000
+    lambdaPort: 4002
+    websocketPort: 4001 
 
 plugins:
   - serverless-webpack
@@ -34,6 +39,20 @@ provider:
   runtime: nodejs12.x
   stage: dev
   region: eu-west-1
+  environment:
+    SQS_URL:
+      Ref: SQSQueue
+    SNS_ARN:
+      Ref: SNSTopic
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action: "sqs:*"
+      Resource:
+        - Fn::GetAtt: [ SQSQueue, Arn ]    
+    - Effect: "Allow"
+      Action: "sns:*"
+      Resource:
+        - Ref: SNSTopic
 
 # you can add statements to the Lambda function's IAM Role here
 #  iamRoleStatements:
@@ -86,54 +105,39 @@ functions:
       - http:
           method: post
           path: /products
-#    The following are a few example events you can configure
-#    NOTE: Please make sure to change your handler code to work with those events
-#    Check the event documentation for details
-#    events:
-#      - http:
-#          path: users/create
-#          method: get
-#      - websocket: $connect
-#      - s3: ${env:BUCKET}
-#      - schedule: rate(10 minutes)
-#      - sns: greeter-topic
-#      - stream: arn:aws:dynamodb:region:XXXXXX:table/foo/stream/1970-01-01T00:00:00.000
-#      - alexaSkill: amzn1.ask.skill.xx-xx-xx-xx
-#      - alexaSmartHome: amzn1.ask.skill.xx-xx-xx-xx
-#      - iot:
-#          sql: "SELECT * FROM 'some_topic'"
-#      - cloudwatchEvent:
-#          event:
-#            source:
-#              - "aws.ec2"
-#            detail-type:
-#              - "EC2 Instance State-change Notification"
-#            detail:
-#              state:
-#                - pending
-#      - cloudwatchLog: '/aws/lambda/hello'
-#      - cognitoUserPool:
-#          pool: MyUserPool
-#          trigger: PreSignUp
-#      - alb:
-#          listenerArn: arn:aws:elasticloadbalancing:us-east-1:XXXXXX:listener/app/my-load-balancer/50dc6c495c0c9188/
-#          priority: 1
-#          conditions:
-#            host: example.com
-#            path: /hello
 
-#    Define function environment variables here
-#    environment:
-#      variable2: value2
+  catalogBatchProcess:
+    handler: handler.catalogBatchProcess
+    events:
+      - sqs:
+        batchSize: 2
+        arn:
+          Fn::GetAtt:
+            - SQSQueue
+            - Arn
 
-# you can add CloudFormation resource templates here
-#resources:
-#  Resources:
-#    NewResource:
-#      Type: AWS::S3::Bucket
-#      Properties:
-#        BucketName: my-new-bucket
-#  Outputs:
-#     NewOutput:
-#       Description: "Description for the output"
-#       Value: "Some output value"
+resources:
+ Resources:
+   SQSQueue:
+     Type: AWS::SQS::Queue
+     Properties:
+       QueueName: ${self:custom.sqsQueueName}  
+   SNSTopic:
+     Type: AWS::SNS::Topic
+     Properties:
+       TopicName: createProductTopic
+   SNSSubscription:
+     Type: AWS::SNS::Subscription
+     Properties:
+       Endpoint: spiderpoul@mail.ru
+       Protocol: email
+       TopicArn:
+         Ref: SNSTopic
+ Outputs:
+     SQSQueueUrl:
+       Value:
+         Ref: SQSQueue
+     SQSQueueArn:
+       Value:
+         Fn::GetAtt: [ SQSQueue, Arn ]       
+
