--- a/product-service/tsconfig.json
+++ b/product-service/tsconfig.json
@@ -7,7 +7,9 @@
     "noUnusedParameters": true,
     "sourceMap": true,
     "target": "es2017",
-    "outDir": "lib"
+    "outDir": "lib",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
   },
   "include": ["./**/*.ts"],
   "exclude": [
