--- a/authorization-service/serverless.yml
+++ b/authorization-service/serverless.yml
@@ -11,7 +11,7 @@
 #
 # Happy Coding!
 
-service: import-service
+service: authorization-service
 # app and org for use with dashboard.serverless.com
 #app: your-app-name
 #org: your-org-name
@@ -19,9 +19,9 @@ service: import-service
 plugins:
   - serverless-offline
   - serverless-webpack
+  - serverless-dotenv-plugin
 
 custom:
-  sqsQueueName: catalogItemsQueue
   webpack: 
     webpackConfig: './webpack.config.js'
     includeModules: true
@@ -41,25 +41,6 @@ provider:
   runtime: nodejs12.x
   stage: dev
   region: eu-west-1
-
-  environment:
-    SQS_URL: "${cf:product-service-${self:provider.stage}.SQSQueueUrl}" 
-
-  iamRoleStatements:
-    - Effect: "Allow"
-      Action: "s3:ListBucket"
-      Resource:
-        - "arn:aws:s3:::toys-products-import-service"
-    - Effect: "Allow"
-      Action:
-        - "s3:*"
-      Resource:
-        - "arn:aws:s3:::toys-products-import-service/*"
-    - Effect: "Allow"
-      Action:
-        - "sqs:*"
-      Resource:
-        - "${cf:product-service-${self:provider.stage}.SQSQueueArn}"
 
 # you can add statements to the Lambda function's IAM Role here
 #  iamRoleStatements:
@@ -91,34 +72,17 @@ provider:
 #    - exclude-me-dir/**
 
 functions:
-  importProductsFile:
-    handler: handler.importProductsFile
-    events:
-      - http:
-          path: import
-          method: get
-          cors: true
-      - request:
-            parameters:
-              querystrings:
-                name: true
-    authorizer:
-      name: tokenAuthorizer
-      arn: '${cf:authorization-service-${self:provider.stage}.basicAuthorizerArn}'
-      identitySource: method.request.header.Authorization
-      resultTtlInSeconds: 0
-      type: token                
+  basicAuthorizer:
+    handler: handler.basicAuthorizer
 
-  importFileParser:
-    handler: handler.importFileParser
-    events:
-      - s3:
-          bucket: toys-products-import-service
-          event: s3:ObjectCreated:*
-          rules:
-            - prefix: uploaded
-          existing: true
-        
+resources:
+  Resources:
+  Outputs:
+    basicAuthorizerArn:
+      Value:
+        Fn::GetAtt: [ BasicAuthorizerLambdaFunction, Arn ]
+
+
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
@@ -158,27 +122,6 @@ functions:
 #    Define function environment variables here
 #    environment:
 #      variable2: value2
-
-resources:
-  Resources:
-    GatewayResponseAccessDenied:
-      Type: AWS::ApiGateway::GatewayResponse
-      Properties:
-        RestApiId:
-          Ref: 'ApiGatewayRestApi'
-        ResponseType: ACCESS_DENIED
-        ResponseParameters:
-          gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
-          gatewayresponse.header.Access-Control-Allow-Credentials: "'true'"
-    GatewayResponseUnauthorized:
-      Type: AWS::ApiGateway::GatewayResponse
-      Properties:
-        RestApiId:
-          Ref: 'ApiGatewayRestApi'
-        ResponseType: UNAUTHORIZED
-        ResponseParameters:
-          gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
-          gatewayresponse.header.Access-Control-Allow-Credentials: "'true'"
 
 # you can add CloudFormation resource templates here
 #resources:
